# webcapsule

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: discoverability-checklist.md  web-archiving-use-cases.md
tests/: test_archive.py  test_cli.py  test_fetcher.py  test_markdown_gen.py  test_metadata.py  test_parser.py  test_search.py
webcapsule/: __init__.py  archive.py  cli.py  fetcher.py  markdown_gen.py  metadata.py  parser.py  screenshot.py  search.py
