[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webcapsule"
version = "0.1.0"
description = "Turn fragile links into durable knowledge - a local-first web archiver."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "WebCapsule Contributors" }
]
keywords = ["archiving", "web", "offline", "local-first", "knowledge", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
]

dependencies = [
  "httpx>=0.27",
  "playwright>=1.44",
  "beautifulsoup4>=4.12",
  "readability-lxml>=0.8",
  "markdownify>=0.12",
  "typer>=0.12",
  "rich>=13",
  "lxml>=5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-beautifulsoup4",
]

[project.scripts]
webcapsule = "webcapsule.cli:app"

[project.urls]
Homepage = "https://github.com/webcapsule/webcapsule"
Repository = "https://github.com/webcapsule/webcapsule"
"Bug Tracker" = "https://github.com/webcapsule/webcapsule/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
