[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webcapsule"
version = "0.1.0"
description = "Local-first web archiver that saves pages as Markdown, HTML, screenshots, metadata, and searchable offline archives."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "WebCapsule Contributors" }
]
keywords = [
  "archiving",
  "bookmarks",
  "cli",
  "digital-preservation",
  "html-to-markdown",
  "knowledge-base",
  "link-rot",
  "local-first",
  "markdown",
  "offline",
  "personal-archive",
  "read-it-later",
  "screenshot",
  "search",
  "web",
  "web-archiver",
  "web-archive",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Archiving",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
]

dependencies = [
  "httpx>=0.27",
  "playwright>=1.44",
  "beautifulsoup4>=4.12",
  "readability-lxml>=0.8",
  "markdownify>=0.12",
  "typer>=0.12",
  "rich>=13",
  "lxml>=5",
  "lxml_html_clean>=0.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-beautifulsoup4",
  "pre-commit>=4",
]

[project.scripts]
webcapsule = "webcapsule.cli:app"

[project.urls]
Homepage = "https://github.com/pikappa13/webcapsule"
Repository = "https://github.com/pikappa13/webcapsule"
Documentation = "https://github.com/pikappa13/webcapsule#readme"
"Bug Tracker" = "https://github.com/pikappa13/webcapsule/issues"
"Source Code" = "https://github.com/pikappa13/webcapsule"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
